# cuda-fluids

./: .gitignore  CMakeLists.txt  README.md  build.sh  gpu_monitor.txt  gpu_monitor_2048.txt  gpu_monitor_4096.txt  kernel_profile_4096.csv
benchmarks/: BENCHMARKS.md  kernel_profile_2048.csv
src/: fluid.cpp  fluid.cu  fluid.h  main.cpp
